--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ services:
   web:
     build: .
     ports:
-      - "3000:3000"
-    volumes:
-      - .:/app
-    environment:
-      - CHOKIDAR_USEPOLLING=true
+      - "3000:80"
+    container_name: news-aggregator
+    restart: unless-stopped
